--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Cuso Prework</title>
 </head>
 <body>
-    Hola, este es el Primer contenido 
+    <h1>
+        Esta es una prueba
+    </h1>
+    <p>
+        Hola, este es el Primer contenido
+    </p>  
 </body>
 </html>
